--- a/packages/rest-api/package.json
+++ b/packages/rest-api/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@swc/core": "^1.2.198",
     "@types/node": "^17.0.42",
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
