--- a/packages/rest-api/package.json
+++ b/packages/rest-api/package.json
@@ -4,7 +4,8 @@
   "description": "Rest API for Secure-u",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "gen:prisma": "prisma generate --schema=prisma-models/postgresql.prisma"
   },
   "author": "Muhammad Rayhan Hamada Budiman <rayhanhamada1999@gmail.com>",
   "license": "MIT",
@@ -13,7 +14,11 @@
     "@types/node": "^17.0.42",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.16",
+    "prisma": "^3.15.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.15.1"
   }
 }
