--- a/packages/rest-api/package.json
+++ b/packages/rest-api/package.json
@@ -19,6 +19,11 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "@prisma/client": "^3.15.1"
+    "@fastify/cors": "^8.0.0",
+    "@fastify/jwt": "^6.1.0",
+    "@fastify/swagger": "^7.3.0",
+    "@prisma/client": "^3.15.1",
+    "fastify": "^4.0.1",
+    "zod": "^3.17.3"
   }
 }
