chore: add mock table and db push script

--- a/packages/rest-api/package.json
+++ b/packages/rest-api/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon",
-    "gen:prisma": "prisma generate --schema=prisma-models/postgresql.prisma"
+    "prisma:gen": "prisma generate --schema=prisma-models/postgresql.prisma",
+    "prisma:push": "prisma db push --schema=prisma-models/postgresql.prisma"
   },
   "author": "Muhammad Rayhan Hamada Budiman <rayhanhamada1999@gmail.com>",
   "license": "MIT",
